user search page (wip)

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,14 +3,17 @@ html(lang="pt-BR")
   head
     meta(charset="utf-8")
     link(rel="stylesheet", href="static/css/bootstrap.min.css")
+    link(rel="stylesheet", href="static/css/bootstrap-icons.css")
     link(rel="stylesheet", href="static/css/sweetalert2.min.css")
     link(rel="stylesheet", href="static/css/swal_toast.css")
     link(rel="stylesheet", href="static/css/style.css")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title= "Checkers - " + title
   body
+    header
+      block layoutNav
     main.container
-      block main
+      block layoutBody
     script(src="static/js/bootstrap.bundle.min.js")
     script(src="static/js/sweetalert2.all.min.js")
     script(src="static/js/swal_toast.js")
