--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,6 @@
 extends layout.pug
 
-block main
+block layoutBody
   div(style={width: '70%'}).card.m-auto.mt-3
     form(name='login')
       div.card-body.d-flex.flex-column.gap-3
