--- a/views/user-search.pug
+++ b/views/user-search.pug
@@ -30,10 +30,10 @@ block pageBody
     if showPrev || showNext
       div.mt-3.d-flex.flex-row
         if showPrev
-          a.btn.btn-light(href=`/users?search=${search}&page=${page - 1}`)
-            i.bi.bi-arrow-primary 
+          a.btn.btn-light(href=`/users?search=${search}&page=${Number(page) - 1}`)
+            i.bi.bi-arrow-left 
             | Previous page
         if showNext
-          a.ms-auto.btn.btn-light(href=`/users?search=${search}&page=${page + 1}`)
+          a.ms-auto.btn.btn-light(href=`/users?search=${search}&page=${Number(page) + 1}`)
             | Next page 
             i.bi.bi-arrow-right
