friend requests + friends crud complete

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,4 +17,5 @@ html(lang="pt-BR")
     script(src="static/js/bootstrap.bundle.min.js")
     script(src="static/js/sweetalert2.all.min.js")
     script(src="static/js/swal_toast.js")
+    script(src="static/js/init.js")
     script(src="static/js/util.js")
