--- a/views/signup.pug
+++ b/views/signup.pug
@@ -18,4 +18,4 @@ block layoutBody
             a(href="/login") Login
             | .
           button(type="submit").ms-auto.btn.btn-primary Sign up
-  script(src="static/js/signup.js") 
+  script(src="static/js/views/signup.js") 
