--- a/views/login.pug
+++ b/views/login.pug
@@ -18,4 +18,4 @@ block layoutBody
             a(href='/signup') Sign up
             | .
           button(type='submit').ms-auto.btn.btn-primary Login
-  script(src='static/js/login.js') 
+  script(src='static/js/views/login.js') 
