--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,3 +19,4 @@ html(lang="pt-BR")
     script(src="static/js/swal_toast.js")
     script(src="static/js/init.js")
     script(src="static/js/util.js")
+    block layoutScripts
