--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,27 +19,45 @@ body {
     bottom: 0;
     right: 5vw;
 
-    width: 30vw;
+    width: 25vw;
     min-width: 20rem;
 
-    background-color: white;
-    border: 1px var(--bs-border-color) solid;
     border-top-right-radius: var(--bs-border-radius);
     border-top-left-radius: var(--bs-border-radius);
+    box-shadow: 2px 2px 10px rgb(0, 0, 0, 0.1);
 }
 
 .notifications-header {
-    padding-top: .25rem;
-    padding-bottom: .25rem;
-    padding-right: .25rem;
-    padding-left: .5rem;
+    background-color: white;
+
+    border: 1px var(--bs-border-color-translucent) solid;
+    border-top-right-radius: var(--bs-border-radius);
+    border-top-left-radius: var(--bs-border-radius);
+    border-bottom: 0;
+
+    padding: .5rem;
 
     display: flex;
     align-items: center;
     flex-direction: row;
+    gap: .5rem;
+
+    transition: background-color 100ms linear;
+
+    &.highlight {
+        background-color: rgb(255, 255, 225)
+    }
+
+    & .btn {
+        background-color: rgb(0, 0, 0, 0.05);
+    }
 }
 
 .notifications-body {
+    background-color: var(--bs-light);
+
+    border: 1px var(--bs-border-color-translucent) solid;
+
     border-top: 1px var(--bs-border-color) solid ;
     height: 0;
     max-height: 60vh;
@@ -49,7 +67,23 @@ body {
 
 .notifications-container {
     padding: .5rem;
-    padding-top: .25rem;
     display: flex;
     flex-direction: column;
+    gap: .5rem;
+}
+
+.notification {
+    padding: .5rem;
+    background-color: white;
+    border: 1px var(--bs-border-color-translucent) solid;
+    border-radius: var(--bs-border-radius);
+    transition: opacity 200ms ease-in;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.notification-link {
+    margin-left: auto;
 }
