--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,8 +4,7 @@ block layoutBody
   div(style={width: '70%'}).card.m-auto.mt-3
     form(name="signup")
       div.card-body.d-flex.flex-column.gap-3
-        h1.fw-bold.text-center Checkers 
-          small | Sign up
+        h1.fw-bold.text-center Checkers | #[small Sign up]
         div
           label(for="username") Username 
           input(type="text", name="username", required).form-control
@@ -13,9 +12,6 @@ block layoutBody
           label(for="password") Password
           input(type="password", name="password", required).form-control
         div.d-flex.flex-row.align-items-center
-          span
-            | Already has an account? 
-            a(href="/login") Login
-            | .
+          span Already has an account? #[a(href="/login") Login].
           button(type="submit").ms-auto.btn.btn-primary Sign up
   script(src="static/js/views/signup.js") 
