--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,11 +2,11 @@ doctype html
 html(lang="pt-BR")
   head
     meta(charset="utf-8")
-    link(rel="stylesheet", href="static/css/bootstrap.min.css")
-    link(rel="stylesheet", href="static/css/bootstrap-icons.css")
-    link(rel="stylesheet", href="static/css/sweetalert2.min.css")
-    link(rel="stylesheet", href="static/css/swal_toast.css")
-    link(rel="stylesheet", href="static/css/style.css")
+    link(rel="stylesheet", href="/static/vendor/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/static/vendor/css/bootstrap-icons.css")
+    link(rel="stylesheet", href="/static/vendor/css/sweetalert2.min.css")
+    link(rel="stylesheet", href="/static/css/swal_toast.css")
+    link(rel="stylesheet", href="/static/css/style.css")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title= "Checkers - " + title
   body
@@ -14,9 +14,9 @@ html(lang="pt-BR")
       block layoutNav
     main.container
       block layoutBody
-    script(src="static/js/bootstrap.bundle.min.js")
-    script(src="static/js/sweetalert2.all.min.js")
-    script(src="static/js/swal_toast.js")
-    script(src="static/js/init.js")
-    script(src="static/js/util.js")
+    script(src="/static/vendor/js/bootstrap.bundle.min.js")
+    script(src="/static/vendor/js/sweetalert2.all.min.js")
+    script(src="/static/js/swal_toast.js")
+    script(src="/static/js/init.js")
+    script(src="/static/js/util.js")
     block layoutScripts
