--- a/views/login.pug
+++ b/views/login.pug
@@ -4,8 +4,7 @@ block layoutBody
   div(style={width: '70%'}).card.m-auto.mt-3
     form(name='login')
       div.card-body.d-flex.flex-column.gap-3
-        h1.fw-bold.text-center Checkers 
-          small | Login
+        h1.fw-bold.text-center Checkers | #[small Login]
         div
           label(for='username') Username 
           input(type='text', name='username', required).form-control
@@ -13,9 +12,6 @@ block layoutBody
           label(for='password') Password
           input(type='password', name='password', required).form-control
         div.d-flex.flex-row.align-items-center
-          span
-            | Don't have an account? 
-            a(href='/signup') Sign up
-            | .
+          span Don't have an account? #[a(href='/signup') Sign up].
           button(type='submit').ms-auto.btn.btn-primary Login
   script(src='static/js/views/login.js') 
