implemented human vs human

--- a/views/ai-form.pug
+++ b/views/ai-form.pug
@@ -17,7 +17,7 @@ block pageBody
             - const selected = time == 2_000
             option(value=time, selected) #{time/1000}s
       div.flex-fill
-        label Piece color
+        label Your piece color
         select.form-control(name="color")
           option(value="white") White
           option(value="black") Black
