saving started games + webhook for receiving notifications when games end

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,3 +93,9 @@ body {
     width: 60%;
     border-radius: var(--bs-border-radius);
 }
+
+a[disabled] {
+    color: gray;
+    pointer-events: none;
+    cursor: not-allowed;
+}
