--- a/views/page.pug
+++ b/views/page.pug
@@ -28,6 +28,8 @@ block layoutNav
             a.nav-link.dropdown-toggle(href="#", data-bs-toggle="dropdown") History
             ul.dropdown-menu
               li
+                a.dropdown-item(href="/stats") Statistics
+              li
                 a.dropdown-item(href="/games/ai") Against an AI
               li
                 a.dropdown-item(href="/games/human") Against a human
